--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4f34bf; }
+  background: #2fcb27; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2a3582; }
+  background: #b8b4a6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ef240d; }
+  background: #a2634a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fdbb4f; }
+  background: #d4fe3d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #92f4bf; }
+  background: #f043d8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3873a2; }
+  background: #64a24f; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1f6398; }
+  background: #102b2f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f7820f; }
+  background: #9999a1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7a3857; }
+  background: #df8b02; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #15dfde; }
+  background: #7de710; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #112212; }
+  background: #f8f92f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e7c3f7; }
+  background: #31ba8b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #75f0d8; }
+  background: #b13c8e; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e1cb5d; }
+  background: #ecd355; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ea178b; }
+  background: #46c39f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6bff9d; }
+  background: #306e68; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #4740af; }
+  background: #520f0a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fc83f7; }
+  background: #e1119d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9b3080; }
+  background: #5adb6e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #c0d153; }
+  background: #d1ada6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #602059; }
+  background: #2b6f9e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ce3694; }
+  background: #b921ad; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a07bd4; }
+  background: #e25e7c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #afac59; }
+  background: #63f77c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8d5522; }
+  background: #a91374; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #dac94a; }
+  background: #a1fbdd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cccce6; }
+  background: #b99eed; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #de19af; }
+  background: #c321df; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #3df207; }
+  background: #a1f85d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #9af31e; }
+  background: #603de4; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e6c2cd; }
+  background: #66664c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b51f4f; }
+  background: #8003e6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0757cb; }
+  background: #f5348c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2f598c; }
+  background: #ea95bd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #29ec20; }
+  background: #cb786f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #aa83dd; }
+  background: #e8d9b0; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d0baa0; }
+  background: #f80e34; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e09dce; }
+  background: #89f142; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2fb087; }
+  background: #3e1c04; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #903b4c; }
+  background: #95ccd3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #bcbe14; }
+  background: #cfd57c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8518b5; }
+  background: #c58ae2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #52e9f4; }
+  background: #325bec; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d104a1; }
+  background: #8d1690; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #083187; }
+  background: #536a02; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #893ef6; }
+  background: #0cf7a7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5e0c7e; }
+  background: #fa29fb; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e507f6; }
+  background: #ab26da; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f59ada; }
+  background: #3d317c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #326632; }
+  background: #05f7c8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #066704; }
+  background: #8c7e0f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #47b65d; }
+  background: #622bd4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #86c768; }
+  background: #41da89; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #cf958f; }
+  background: #89963a; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2699f4; }
+  background: #0ef4a8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2a5d10; }
+  background: #2b4cc8; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #939811; }
+  background: #de3c7a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #20f01c; }
+  background: #b2921f; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #67f541; }
+  background: #81b00e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #74949e; }
+  background: #4d5463; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #89e577; }
+  background: #59c884; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #377661; }
+  background: #d0c432; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3e73cb; }
+  background: #631ff7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #fd3fdb; }
+  background: #a040b5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1f8d25; }
+  background: #81fbd1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5cb217; }
+  background: #dc01f0; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f8a223; }
+  background: #65105c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5c85dd; }
+  background: #75703a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #2303c6; }
+  background: #9419b3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1aa04c; }
+  background: #62d7e8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #87a389; }
+  background: #f12968; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #63e2dd; }
+  background: #6bfb34; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3f1397; }
+  background: #503dc4; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9ffb04; }
+  background: #d8cea7; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #10c0cd; }
+  background: #dbcd80; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1f15bd; }
+  background: #5c24ef; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2a5ca1; }
+  background: #80e00b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #29b25c; }
+  background: #8c72bd; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7482c6; }
+  background: #f0013d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f150e5; }
+  background: #70475e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dd44aa; }
+  background: #250c36; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #dbcfc5; }
+  background: #e0b605; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #90675a; }
+  background: #062321; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6ebe53; }
+  background: #6c5273; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #45b40d; }
+  background: #89e2e5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #330231; }
+  background: #c1f38b; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #150d3c; }
+  background: #730158; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0c65dd; }
+  background: #b59caf; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #6ec127; }
+  background: #32f243; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #291b48; }
+  background: #284ff7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #ff62b0; }
+  background: #8fa11a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #845d17; }
+  background: #fe9805; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #74c58f; }
+  background: #2a9fc6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #66c3a0; }
+  background: #9dc933; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #db181c; }
+  background: #33c1eb; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8f8020; }
+  background: #27ac7c; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ec118b; }
+  background: #79e908; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d220a7; }
+  background: #7c65c0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7df4b9; }
+  background: #7bc640; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a8c584; }
+  background: #3a5c08; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14945,8 +14945,6 @@ option {
   margin: 0px !important; }
 .system-settings-wrapper .field-section {
   padding: 20px 0px; }
-.system-settings-wrapper .d-flex {
-  flex-direction: column; }
 .system-settings-wrapper .tabs-aggre button {
   margin: 6px 0px; }
 
@@ -14971,20 +14969,34 @@ option {
     margin-right: 15px; }
 
 @media screen and (max-width: 767px) {
-  .system-settings-wrapper .inner-tab-content-right-col {
-    padding: 20px 12px 30px; }
-  .system-settings-wrapper .static-routes-div {
-    padding-left: 15px;
-    padding-right: 15px; }
-    .system-settings-wrapper .static-routes-div .form-group:nth-child(2) label {
-      display: none; }
-    .system-settings-wrapper .static-routes-div .form-group::nth-child(3) label {
-      display: none; }
-  .system-settings-wrapper .field-section .d-flex div:nth-child(4) {
-    margin-top: 10px;
-    margin-left: 0px;
-    flex-basis: auto;
-    text-align: center; }
+  .system-settings-wrapper {
+    flex-direction: column; }
+    .system-settings-wrapper .sliding-left-section {
+      position: inherit; }
+      .system-settings-wrapper .sliding-left-section a {
+        display: none; }
+    .system-settings-wrapper .sliding-right-section {
+      position: inherit;
+      left: inherit;
+      width: auto; }
+    .system-settings-wrapper .inner-tab-content-right-col {
+      padding: 20px 12px 30px; }
+    .system-settings-wrapper .static-routes-div {
+      padding-left: 15px;
+      padding-right: 15px; }
+      .system-settings-wrapper .static-routes-div .form-group:nth-child(2) label {
+        display: none; }
+      .system-settings-wrapper .static-routes-div .form-group::nth-child(3) label {
+        display: none; }
+    .system-settings-wrapper .d-flex {
+      flex-direction: column; }
+    .system-settings-wrapper .field-section .d-flex {
+      flex-direction: column; }
+      .system-settings-wrapper .field-section .d-flex div:nth-child(4) {
+        margin-top: 10px;
+        margin-left: 0px;
+        flex-basis: auto;
+        text-align: center; }
 
   .profile-box {
     padding: 10px; }
