--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2fcb27; }
+  background: #a05d3e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #b8b4a6; }
+  background: #be15b9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #a2634a; }
+  background: #65f912; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d4fe3d; }
+  background: #866786; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f043d8; }
+  background: #340f24; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #64a24f; }
+  background: #d2af88; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #102b2f; }
+  background: #b2365e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #9999a1; }
+  background: #b1fe66; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #df8b02; }
+  background: #0e45db; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7de710; }
+  background: #5e3cdd; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f8f92f; }
+  background: #d18735; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #31ba8b; }
+  background: #8e94e6; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b13c8e; }
+  background: #9b6cae; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ecd355; }
+  background: #4156c5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #46c39f; }
+  background: #68f7c4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #306e68; }
+  background: #6ae3ae; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #520f0a; }
+  background: #3e5196; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #e1119d; }
+  background: #9aa44b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5adb6e; }
+  background: #6172c0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d1ada6; }
+  background: #2a2985; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #2b6f9e; }
+  background: #184571; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b921ad; }
+  background: #3436bf; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e25e7c; }
+  background: #7b29f2; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #63f77c; }
+  background: #8b8886; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a91374; }
+  background: #209140; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #a1fbdd; }
+  background: #65a079; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b99eed; }
+  background: #022855; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #c321df; }
+  background: #060c3d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #a1f85d; }
+  background: #94c535; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #603de4; }
+  background: #3932d2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #66664c; }
+  background: #ce4a6c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8003e6; }
+  background: #087858; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f5348c; }
+  background: #a8e07a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ea95bd; }
+  background: #e9f497; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #cb786f; }
+  background: #cd8bcf; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e8d9b0; }
+  background: #d56fb9; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f80e34; }
+  background: #e42cb4; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #89f142; }
+  background: #4c864d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3e1c04; }
+  background: #8303f3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #95ccd3; }
+  background: #bde2b4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cfd57c; }
+  background: #70758f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c58ae2; }
+  background: #88623f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #325bec; }
+  background: #f549b6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8d1690; }
+  background: #f70848; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #536a02; }
+  background: #c8b55b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #0cf7a7; }
+  background: #e38540; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #fa29fb; }
+  background: #d04195; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ab26da; }
+  background: #a344dc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3d317c; }
+  background: #8c9769; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #05f7c8; }
+  background: #a80c45; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8c7e0f; }
+  background: #7e1bbc; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #622bd4; }
+  background: #22fa0a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #41da89; }
+  background: #5da211; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #89963a; }
+  background: #811f7c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0ef4a8; }
+  background: #4319d5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2b4cc8; }
+  background: #3e4064; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #de3c7a; }
+  background: #113aaa; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b2921f; }
+  background: #a599b6; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #81b00e; }
+  background: #71b321; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4d5463; }
+  background: #9ee7a4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #59c884; }
+  background: #07abb3; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d0c432; }
+  background: #5ca53d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #631ff7; }
+  background: #aaceec; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a040b5; }
+  background: #ce094f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #81fbd1; }
+  background: #fc3708; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #dc01f0; }
+  background: #0a253b; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #65105c; }
+  background: #246297; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #75703a; }
+  background: #e808b3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #9419b3; }
+  background: #66f2a5; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #62d7e8; }
+  background: #c9ed3c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f12968; }
+  background: #ce6401; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6bfb34; }
+  background: #0360b7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #503dc4; }
+  background: #4a205b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d8cea7; }
+  background: #3c5bb5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #dbcd80; }
+  background: #6325b2; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5c24ef; }
+  background: #6e3ce7; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #80e00b; }
+  background: #a15095; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8c72bd; }
+  background: #665275; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f0013d; }
+  background: #767068; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #70475e; }
+  background: #efc61f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #250c36; }
+  background: #ed3cee; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e0b605; }
+  background: #d15ad8; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #062321; }
+  background: #574861; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6c5273; }
+  background: #2f7f08; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #89e2e5; }
+  background: #ada3d3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c1f38b; }
+  background: #cf0aea; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #730158; }
+  background: #4bcd58; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b59caf; }
+  background: #42cc36; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #32f243; }
+  background: #478ee1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #284ff7; }
+  background: #ca053d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8fa11a; }
+  background: #4836fe; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #fe9805; }
+  background: #03326d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2a9fc6; }
+  background: #ca90db; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9dc933; }
+  background: #9d5355; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #33c1eb; }
+  background: #5932a2; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #27ac7c; }
+  background: #d78392; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #79e908; }
+  background: #59ceae; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #7c65c0; }
+  background: #9ef554; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7bc640; }
+  background: #874ff6; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #3a5c08; }
+  background: #224227; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14945,6 +14945,8 @@ option {
   margin: 0px !important; }
 .system-settings-wrapper .field-section {
   padding: 20px 0px; }
+.system-settings-wrapper .static-routes-div {
+  padding: 20px; }
 .system-settings-wrapper .tabs-aggre button {
   margin: 6px 0px; }
 
