--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3554,6 +3554,9 @@ margin-top: 12px;
   .field-section {
     padding: 20px 0px;
   }
+  .static-routes-div {
+    padding: 20px;
+  }
   .tabs-aggre {
     button {
       margin: 6px 0px;
